Feat: Header corrigido

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,15 @@
 ---
-import Header from '../components/Header.astro'
-import SectionExemplo from '../components/SectionExemplo.astro'
+import Header from '../components/Header/index.astro'
+import Section1 from '../components/Section1/index.astro'
 import Layout from '../layouts/Layout.astro'
-import CardExemplo from '../components/ui/CardExemplo.astro'
 import astroLogo from '../assets/astro.svg'
 ---
 
 <Layout>
 	<Header />
 	<main class="flex flex-col items-center gap-8 py-10">
-		<SectionExemplo />
+		<Section1 />
 		<section class="flex flex-wrap justify-center gap-8 mt-10">
-			<CardExemplo img={astroLogo.src} title="Astro Framework" />
-			<CardExemplo img="https://placehold.co/128x128" title="Outro Card" />
 		</section>
 	</main>
 </Layout>
