--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,15 @@
 ---
-import "../styles/global.css";
+import './src/styles/global.css'
 ---
 
 <!doctype html>
-<html lang="pt-BR">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href=" " />
 		<meta name="generator" content={Astro.generator} />
-		<title>Clínica Sallute</title>
+		<title>Astro Basics</title>
 	</head>
 	<body>
 		<slot />
