Feat: Header e Swipper

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,9 @@ import astroLogo from '../assets/astro.svg'
 
 <Layout>
 	<Header />
-	<main class="flex flex-col items-center gap-8 py-10">
-		<Section1 />
+	<Section1 />
+	<main class="flex w-full flex-col items-center gap-8 py-10">
+
 		<section class="flex flex-wrap justify-center gap-8 mt-10">
 		</section>
 	</main>
