feat: adicao da base section footer

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro'
 import SectionExemplo from '../components/SectionExemplo.astro'
+import Footer from '../components/Footer.astro'
 import Layout from '../layouts/Layout.astro'
 import CardExemplo from '../components/ui/CardExemplo.astro'
 import astroLogo from '../assets/astro.svg'
@@ -11,8 +12,9 @@ import astroLogo from '../assets/astro.svg'
 	<main class="flex flex-col items-center gap-8 py-10">
 		<SectionExemplo />
 		<section class="flex flex-wrap justify-center gap-8 mt-10">
-			<CardExemplo img={astroLogo.src} title="Astro Framework" />
-			<CardExemplo img="https://placehold.co/128x128" title="Outro Card" />
 		</section>
 	</main>
+	<footer>
+		<Footer />
+	</footer>
 </Layout>
