feat: criação da segunda section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Section_2 from '../components/section_2.astro';
-import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header/index.astro'
+import Section1 from '../components/Section1/index.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout>
-	<Section_2 />
+	<Header />
+	<Section1 />
 </Layout>
