--- a/src/components/Section3.astro
+++ b/src/components/Section3.astro
@@ -1,20 +1,52 @@
 ---
 import CardDoutores from "./ui/CardDoutores.astro"
+
 import diogo from "../assets/especialistas/Diogo.png"
 import eliane from "../assets/especialistas/Eliane.jpg"
 import victor from "../assets/especialistas/Victor.jpg"
-import suzana from "../assets/especialistas/Suzana.jpg"
-import ricardo from "../assets/especialistas/Ricardo.jpg"
+import ricardo from "../assets/especialistas/Ricardo_nutri.jpg"
+import cicero from "../assets/especialistas/Cicero_ultrassonografista.png"
+import eduardo from "../assets/especialistas/Eduardo_urologista.png"
+import elfrida from "../assets/especialistas/Elfrida_neuropsi.png"
+import fabian from "../assets/especialistas/Fabian_cardio.png"
+import irwins from "../assets/especialistas/Irwins_urologista.png"
+import jandira from "../assets/especialistas/Jandira_fono.png"
+import jose from "../assets/especialistas/Jose_mastologia.png"
+import juarez from "../assets/especialistas/Juarez_fisioterapeuta.png"
+import julia from "../assets/especialistas/Julia_gineco.png"
+import juliana from "../assets/especialistas/Juliana_fisio.png"
+import lilian from "../assets/especialistas/Lilian_alergista.png"
+import ricardo_neuro from "../assets/especialistas/Ricardo_neuro.png"
+import solange from "../assets/especialistas/Solange_clinica.png"
+import suzane from "../assets/especialistas/Suzane_gineco.png"
+import thaysa from "../assets/especialistas/Thaysa_pneumologia.png"
+import ubirajara from "../assets/especialistas/Ubirajara_ultrassonografista.png"
+import victoria from "../assets/especialistas/Victoria_nutri.png"
+
+import Cruz from "../assets/icone_cruz.svg"
 
 const doctors = [
   { img: diogo.src, title: "Diogo Bento", text: "Psiquiatra" },
   { img: eliane.src, title: "Dra. Eliane Calumby", text: "Endrocrinologista" },
   { img: victor.src, title: "Dr. Victor Hugo", text: "Dermatologista" },
-  { img: suzana.src, title: "Dra. Suzana Cabral", text: "Ginecologista" },
   { img: ricardo.src, title: "Ricardo Macena", text: "Nutricionista"},
-  { img: eliane.src, title: "Dra. Eliane Calumby", text: "Endrocrinologista" },
-  { img: victor.src, title: "Dr. Victor Hugo", text: "Dermatologista" },
-  { img: suzana.src, title: "Dra. Suzana Cabral", text: "Ginecologista" },
+  { img: cicero.src, title: "Dr.Cícero Almeida", text: "Ultrassonografista" },
+  { img: eduardo.src, title: "Dr. Eduardo Nunes", text: "Urologista" },
+  { img: elfrida.src, title: "Dra. Elfrida Gregório", text: "Neuropsicóloga" },
+  { img: fabian.src, title: "Dr. Fabian Touret", text: "Cardiologista" },
+  { img: irwins.src, title: "Dr. Irwins Souza", text: "Urologista" },
+  { img: jandira.src, title: "Dra. Jandira Maia", text: "Fonoaudióloga" },
+  { img: jose.src, title: "Dr. José Venâncio", text: "Mastologista" },
+  { img: juarez.src, title: "Dr. Juaréz Alexandre", text: "Fisioterapeuta" },
+  { img: julia.src, title: "Dra. Júlia Tenório", text: "Ginecologista" },
+  { img: juliana.src, title: "Dra. Juliana Gomes", text: "Fisioterapeuta" },
+  { img: lilian.src, title: "Dra. Lilian Maria", text: "Alergista" },
+  { img: ricardo_neuro.src, title: "Dr. Ricardo Tenório", text: "Neurologista" },
+  { img: solange.src, title: "Dra. Solange Beltrão", text: "Clínica Geral" },
+  { img: suzane.src, title:"Dra. Suzane Cabral", text:"Ginecologista" },
+  { img: thaysa.src, title: "Dra. Thaysa Alburquerque", text: "Pneumologista" },
+  { img: ubirajara.src, title: "Dr. Ubirajara Matos", text: "Ultrassonografista" },
+  { img: victoria.src, title: "Dra. Victoria Medeiros", text: "Nutricionista" }
 ]
 ---
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -23,7 +55,7 @@ const doctors = [
   <div class="container mx-auto px-4 max-w-5xl">
     <div class="flex justify-center items-center">
       <div class="flex items-center gap-2">
-        <img src="/Vector.svg" alt="Vector" class="w-4" />
+        <img src={Cruz.src} alt="Vector" class="w-4" />
         <p class="text-lg text-center font-bold max-w-3xl mx-auto bg-gradient-to-r from-[#37B5A6] to-[#0B7164] bg-clip-text text-transparent">NOSSOS MÉDICOS</p>
       </div>
     </div>
