--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import './src/styles/global.css'
+import "../styles/global.css"
 ---
 
 <!doctype html>
@@ -9,7 +9,7 @@ import './src/styles/global.css'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href=" " />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Clínica Sallute</title>
 	</head>
 	<body>
 		<slot />
