--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,8 @@ import astroLogo from '../assets/astro.svg'
 	<main class="flex flex-col items-center gap-8 py-10">
 		<SectionExemplo />
 		<section class="flex flex-wrap justify-center gap-8 mt-10">
+			<CardExemplo img={astroLogo.src} title="Astro Framework" />
+			<CardExemplo img="https://placehold.co/128x128" title="Outro Card" />
 		</section>
 	</main>
 	<footer>
