--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,9 @@ import SectionExemplo from '../components/SectionExemplo.astro'
 import Layout from '../layouts/Layout.astro'
 import CardExemplo from '../components/ui/CardExemplo.astro'
 import astroLogo from '../assets/astro.svg'
+import QuintaSection from '../components/QuintaSection.astro'
+
+
 ---
 
 <Layout>
@@ -15,4 +18,6 @@ import astroLogo from '../assets/astro.svg'
 			<CardExemplo img="https://placehold.co/128x128" title="Outro Card" />
 		</section>
 	</main>
+	<QuintaSection />
+
 </Layout>
