fix: remove duplicata de import da quintasection

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 import CardExemplo from '../components/ui/CardExemplo.astro'
 import astroLogo from '../assets/astro.svg'
 import QuintaSection from '../components/QuintaSection.astro'
-
+import Section3 from '../components/Section3.astro'
 
 ---
 
@@ -17,6 +17,7 @@ import QuintaSection from '../components/QuintaSection.astro'
 			<CardExemplo img={astroLogo.src} title="Astro Framework" />
 			<CardExemplo img="https://placehold.co/128x128" title="Outro Card" />
 		</section>
+		<Section3 />
 	</main>
 	<QuintaSection />
 
