fix: Correções de melhorias no código

--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -1,15 +1,15 @@
 ---
-import Button from '../components/ui/Button.astro';
-import DescriptionSection from '../components/ui/DescriptionSection.astro';
-import Img1 from '../assets/img_clinica1.svg';
-import IconePlus from '../assets/plus.svg'
+import Button from '../../components/ui/Button.astro';
+import DescriptionSection from '../../components/ui/DescriptionSection.astro';
+import Img1 from '../../assets/img_clinica1.svg';
+import IconePlus from '../../assets/plus.svg'
 ---
 
 <section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16">
     
     <DescriptionSection 
         img={IconePlus.src}
-        section='NOSSOS AMBIENTES'
+        label='NOSSOS AMBIENTES'
         title='Conforto, Segurança e Atendimento Humanizado'
         description='A Clínica conta com um ambiente moderno e acolhedor, pensado para oferecer conforto, bem-estar e uma experiência humanizada aos pacientes.'
         />
