--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import HeaderSalute from '../components/Header/index.astro'
 import Section1 from '../components/Section1/index.astro'
-import Section4 from '../components/Section4.astro'
+import Section4 from '../components/Section4/index.astro'
 import SectionExemplo from '../components/SectionExemplo.astro'
 import Layout from '../layouts/Layout.astro'
 import CardExemplo from '../components/ui/CardExemplo.astro'
