--- a/src/components/ui/CardDoutores.astro
+++ b/src/components/ui/CardDoutores.astro
@@ -3,8 +3,9 @@ export interface Props {
   img: string
   title: string
   text: string
+  objectTop?: boolean
 }
-const { img, title, text } = Astro.props
+const { img, title, text, objectTop } = Astro.props
 ---
 
 <article
@@ -13,7 +14,7 @@ const { img, title, text } = Astro.props
   <img
     src={img}
     alt={title}
-    class="w-32 h-32 rounded-full object-cover"
+    class={`w-32 h-32 rounded-full object-cover ${objectTop ? 'object-top' : ''}`}
 />
   <h2 class="text-lg font-bold text-gray-800 mb-2 text-center">{title}</h2>
   <p class="text-base font-bold text-gray-600 text-center">{text}</p> 
