--- a/src/components/Section3.astro
+++ b/src/components/Section3.astro
@@ -51,7 +51,7 @@ const doctors = [
 ---
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-<section class="w-full py-20 bg-[#F4F7FF]">
+<section id="section3" class="w-full py-20 bg-[#F4F7FF]">
   <div class="container mx-auto px-4 max-w-5xl">
     <div class="flex justify-center items-center">
       <div class="flex items-center gap-2">
