--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -5,7 +5,7 @@ import Img1 from '../../assets/img_clinica1.svg';
 import IconePlus from '../../assets/plus.svg'
 ---
 
-<section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16">
+<section id="section4" class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16">
     
     <DescriptionSection 
         img={IconePlus.src}
