--- a/src/components/Section1/index.astro
+++ b/src/components/Section1/index.astro
@@ -8,7 +8,7 @@ import imagemcta from "../../assets/ImgsSection1/imagemcta.svg";
 import "keen-slider/keen-slider.min.css";
 ---
 
-<section class="relative w-full overflow-hidden">
+<section id="section1" class="relative w-full overflow-hidden">
   <div
     id="my-keen-slider"
     class="relative h-[300px] sm:h-[400px] md:h-[500px] lg:h-[900px]"
