--- a/src/components/Section2/index.astro
+++ b/src/components/Section2/index.astro
@@ -22,7 +22,7 @@ section {
 }
 </style>
 
-<section class="flex flex-col items-center justify-center py-[100px] gap-16 ">
+<section id="section2" class="flex flex-col items-center justify-center py-[100px] gap-16 ">
    
     <div class="flex flex-col w-[360] sm:w-[730px] sm:h-[142px] text-center gap-4 px-14">
         <div class="flex justify-center content-center gap-3">
