--- a/src/components/Section4/index.astro
+++ b/src/components/Section4/index.astro
@@ -1,38 +1,55 @@
 ---
 import Button from '../../components/ui/Button.astro';
 import DescriptionSection from '../../components/ui/DescriptionSection.astro';
-import Img1 from '../../assets/img_clinica1.svg';
 import IconePlus from '../../assets/plus.svg'
+import Recepcao from '../../assets/ImgsClinica/recepcao.svg';
+import Sala from '../../assets/ImgsClinica/sala.svg';
+import Corredor1 from '../../assets/ImgsClinica/corredor1.svg';
+import Corredor2 from '../../assets/ImgsClinica/corredor2.svg';
 ---
 
 <section class="flex flex-col items-center justify-center py-10 sm:py-16 gap-12 sm:gap-16">
     
     <DescriptionSection 
         img={IconePlus.src}
-        label='NOSSOS AMBIENTES'
+        label='NOSSO AMBIENTE'
         title='Conforto, Segurança e Atendimento Humanizado'
         description='A Clínica conta com um ambiente moderno e acolhedor, pensado para oferecer conforto, bem-estar e uma experiência humanizada aos pacientes.'
-        />
-
-    <div class="relative w-full mt-4 sm:mt-6 md:mt-8 lg:mt-10 xl:mt-12 px-6 sm:px-8 md:px-12 lg:px-20">
-        <img src={Img1.src} alt="Recepção da Clínica" class="rounded-3xl w-full h-auto object-cover" />
-
-        <div class="absolute bottom-0 left-8 right-8 lg:left-15 lg:right-20 xl:right-25 2xl:left-20 2xl:right-30 rounded-b-[32px] px-6 sm:px-10 py-6 sm:py-10 flex items-center gap-4">
+    />
+    
+    <div class="flex flex-col lg:flex-row items-center justify-center gap-3 px-5 w-full max-w-7xl">
+        
+        <div class="relative w-full lg:w-3/4">
             
-            <h1 class="text-white text-base sm:text-xl md:text-2xl lg:text-3xl xl:text-5xl 2xl:text-6xl max-w-2xs sm:max-w-xs md:max-w-md lg:max-w-lg xl:max-w-3xl 2xl:max-w-4xl font-semibold">
-                Ambiente pensado nos mínimos detalhes para você e sua família!
-            </h1>
-
-            <div class="sm:ml-auto">
-                <Button 
-                  title="Conheça-nos"
-                  href='https://www.instagram.com/sallute.clinica/'
-                  className="text-xs sm:text-sm md:text-base px-4 py-2 sm:px-6 sm:py-3"
-                />
+            <img src={Recepcao.src} alt="Recepção da Clínica" class="rounded-3xl w-full h-auto object-cover" />
+            
+            <div class="absolute bottom-0 left-0 right-0 px-3 sm:px-6 py-4 sm:py-6 flex flex-row items-end sm:items-center gap-2 sm:gap-6 rounded-b-3xl">
+                
+                <h1 class="text-white text-xs sm:text-base md:text-xl lg:text-2xl xl:text-4xl font-semibold max-w-full sm:max-w-xs md:max-w-md lg:max-w-lg xl:max-w-2xl">
+                    Ambiente pensado nos mínimos detalhes para você e sua família!
+                </h1>
+                
+                <div class="sm:ml-auto mt-2 sm:mt-0">
+                    <Button 
+                        title="Conheça-nos"
+                        href='https://www.instagram.com/sallute.clinica/'
+                        className="text-xs sm:text-sm md:text-base px-3 py-1 sm:px-4 sm:py-2 whitespace-nowrap"
+                    />
+                
+                </div>
+            
             </div>
-
+        
         </div>
 
+        <div class="flex flex-row lg:flex-col w-full lg:w-1/4 lg:h-full items-center justify-center gap-4 lg:gap-3 px-3 sm:px-6 lg:px-0">
+            
+            <img src={Corredor1.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
+            <img src={Sala.src} alt="Imagem Sala de coletas" class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
+            <img src={Corredor2.src} alt="Imagem Corredor"   class="rounded-xs lg:rounded-xl w-1/3 lg:w-full h-full lg:h-1/3 object-cover" />
+        
+        </div>
+    
     </div>
 
 </section>
