feat: Criar pagina Corpo Clinico

--- a/src/components/ui/CardDoutores.astro
+++ b/src/components/ui/CardDoutores.astro
@@ -14,8 +14,8 @@ const { img, title, text, objectTop } = Astro.props
   <img
     src={img}
     alt={title}
-    class={`w-32 h-32 rounded-full object-cover ${objectTop ? 'object-top' : ''}`}
+    class={`w-32 lg:w-55 h-32 lg:h-55 rounded-full object-cover ${objectTop ? 'object-top' : ''}`}
 />
-  <h2 class="text-lg font-bold text-gray-800 mb-2 text-center">{title}</h2>
+  <h2 class="text-lg font-bold text-gray-800 mb-2 text-center pt-2 lg:pt-4">{title}</h2>
   <p class="text-base font-bold text-gray-600 text-center">{text}</p> 
 </article>
