--- a/src/components/Section3.astro
+++ b/src/components/Section3.astro
@@ -22,6 +22,8 @@ import suzane from "../assets/especialistas/Suzane_gineco.png"
 import thaysa from "../assets/especialistas/Thaysa_pneumologia.png"
 import ubirajara from "../assets/especialistas/Ubirajara_ultrassonografista.png"
 import victoria from "../assets/especialistas/Victoria_nutri.png"
+import daise from "../assets/especialistas/Daise_Nicacio.png"
+import larissa from "../assets/especialistas/Larissa_Tenorio.jpeg"
 
 import Cruz from "../assets/plus.svg"
 
@@ -46,7 +48,9 @@ const doctors = [
   { img: suzane.src, title:"Ginecologista", text:"Dra. Suzane Cabral", },
   { img: thaysa.src, title: "Pneumologista", text: "Dra. Thaysa Alburquerque", objectTop: true },
   { img: ubirajara.src, title: "Ultrassonografista", text: "Dr. Ubirajara Matos", objectTop: true },
-  { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true }
+  { img: victoria.src, title: "Nutricionista", text: "Dra. Victoria Medeiros", objectTop: true },
+  { img: daise.src, title: "Otorrino", text: "Dra. Daise Nicacio", objectTop: true },
+    { img: larissa.src, title: "Otorrinolaringologista", text: "Dra. Larissa Tenório", objectTop: true },
 ]
 ---
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -67,7 +71,7 @@ const doctors = [
   </div>
   <div class="mt-10">
     <div class="swiper">
-      <div class="swiper-wrapper">
+      <div class="swiper-wrapper px-10 lg:px-15">
         {doctors.map((doctor) => (
           <div class="swiper-slide flex justify-center ">
             <CardDoutores img={doctor.img} title={doctor.title} text={doctor.text} objectTop={doctor.objectTop} />
