--- a/src/components/Section2/index.astro
+++ b/src/components/Section2/index.astro
@@ -11,6 +11,9 @@ import iconDepilacao from "../../assets/cardsIcons/icon1_services.svg";
 import iconUltrassom from "../../assets/cardsIcons/icon2_services.svg";
 import iconDermato from "../../assets/cardsIcons/icon3_services.svg";
 import iconClinico from "../../assets/cardsIcons/icon4_services.svg";
+import iconFisio from "../../assets/cardsIcons/icon5_services.svg";
+import iconExamesLaboratorial from "../../assets/cardsIcons/icon6_services.svg";
+import iconExamesGeral from "../../assets/cardsIcons/icon7_services.svg";
 ---
 
 <style>
@@ -22,73 +25,58 @@ section {
 }
 </style>
 
-<section class="flex flex-col items-center justify-center py-[100px] gap-16 ">
+<section class="flex flex-col items-center justify-center px-[8px] py-[50px] sm:py-[100px] gap-14 ">
    
-    <div class="flex flex-col w-[360] sm:w-[730px] sm:h-[142px] text-center gap-4 px-14">
-        <div class="flex justify-center content-center gap-3">
-            <img src={imgVector.src} alt="icon" class="w-4">
-            <p class="text-sm font-bold tracking-widest bg-gradient-to-r from-[#37B5A6] to-[#0B7164] bg-clip-text text-transparent">
-                NOSSOS SERVIÇOS
-            </p>
+        <div class="flex justify-center text-center">
+            <h1 class="text-[32px]/[48px] md:text-[40px] font-semibold text-[#031E2D]">
+                Nossos Serviços
+            </h1>
         </div>
         
-        <div>
-            <p class="text-[32px]/[48px] sm:text-[40px] font-semibold text-[#031E2D]">
-                Diversas Soluções de Saúde
-            </p>
-        </div>
-        
-       <div>
-            <p class="text-base/[24px] font-normal text-[#131313] opacity-80">
-                Na Sallute, oferecemos uma ampla gama de serviços médicos adaptados às suas necessidades, desde exames de rotina até tratamentos especializados.
-            </p>
-       </div>
-    </div>
 
-    <div class="grid sm:grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 p-[15px] gap-8">
-        <CardSaibaMais
-            title="Diversas Especialidades"
-            body="Na Sallute, oferecemos diversas especialidades médicas para cuidar de você e da sua família. Confira todos os nossos serviços disponíveis!"
-            button="Saiba Mais"
+    <div class="flex flex-wrap justify-center xl:grid xl:grid-cols-3 2xl:grid 2xl:grid-cols-3 sm:p-[15px] gap-4 sm:gap-8">
+        <CardEspecialidades
+            img_background={imgClinico.src}
+            img_logo={iconClinico.src}
+            alt="Corpo Clínico"
+            title="Corpo Clínico"
         />
 
-         <CardEspecialidades
-            img_background={imgDepilacao.src}
-            img_logo={iconDepilacao.src}
-            alt="Depilação a Laser"
-            title="Depilação a Laser"
-            body="Tecnologia de ponta, garantindo segurança, conforto e resultados duradouros para seus pacientes."
-        />
-
-         <CardEspecialidades
+        <CardEspecialidades
             img_background={imgUltrassom.src}
             img_logo={iconUltrassom.src}
             alt="Ultrassonografia"
             title="Ultrassonografia"
-            body="Atendimento em ultrassonografia, com profissionais qualificados para oferecer diagnósticos confiáveis."
+        />
+
+         <CardEspecialidades
+            img_background={imgDermato.src}
+            img_logo={iconExamesLaboratorial.src}
+            alt="Exames Laboratoriais"
+            title="Exames Laboratoriais"
         />
 
         <CardEspecialidades
             img_background={imgDermato.src}
-            img_logo={iconDermato.src}
-            alt="Dermatologista"
-            title="Dermatologista"
-            body="Para tratamento de doenças da pele, unhas e cabelos, além de cuidados estéticos especializados."
+            img_logo={iconExamesGeral.src}
+            alt="Exames em Geral"
+            title="Exames em Geral"
         />
 
         <CardEspecialidades
-            img_background={imgClinico.src}
-            img_logo={iconClinico.src}
-            alt="Clínico Geral"
-            title="Clínico Geral"
-            body="Avaliação médica, diagnóstico, orientação de tratamentos e encaminhamento para especialistas."
+            img_background={imgDepilacao.src}
+            img_logo={iconDepilacao.src}
+            alt="Depilação a Laser"
+            title="Depilação a Laser"
         />
 
-         <CardSaibaMais
-            title="Agende sua Consulta"
-            body="Acesso rápido aos serviços da médicos, com atendimento imediato quando você mais precisa."
-            button="Contate-nos"
-        /> 
+        <CardEspecialidades
+            img_background={imgDermato.src}
+            img_logo={iconFisio.src}
+            alt="Fisioterapia"
+            title="Fisioterapia"
+        />
+
         
     </div>
 </section>
