--- a/src/components/ui/cardEspecialidade/cardEspecialidades.astro
+++ b/src/components/ui/cardEspecialidade/cardEspecialidades.astro
@@ -4,17 +4,17 @@ interface Props {
     img_logo: string;
     alt: string;
     title: string;
-    body: string;
+    body?: string;
 }
 
 const {img_background, img_logo, alt, title, body} = Astro.props;
 ---
 
-<div class="relative flex flex-col w-[310px] h-[278px] sm:w-[416px] sm:h-[360px] justify-center rounded-3xl bg-[#A2CFCA] shadow-[4px_4px_4px_#AEAEAE] px-8 gap-6 sm:px-2.5 text-white overflow-hidden"
-style="box-shadow:
-    4px 4px 8px 0 rgba(25, 90, 255, 0.15),
-    0px 0px 8px 0 #AEAEAE,
-    inset -4px -4px 8px 0 rgba(23, 23, 23, 0.12);">
+<article class="relative flex flex-col justify-center w-[185px] h-[115px] sm:w-[255px] sm:h-[175px] lg:w-[400px] lg:h-[272px] rounded-2xl lg:rounded-3xl bg-[#A2CFCA] shadow-[4px_4px_4px_#AEAEAE] px-8 gap-6 sm:px-2.5 text-white overflow-hidden"
+    style="box-shadow:
+        4px 4px 8px 0 rgba(25, 90, 255, 0.15),
+        0px 0px 8px 0 #AEAEAE,
+        inset -4px -4px 8px 0 rgba(23, 23, 23, 0.12);">
 
 
     <div 
@@ -23,24 +23,20 @@ style="box-shadow:
     ></div>
 
 
-    <div class="relative z-10 flex flex-col sm:p-12 gap-6">
-        <div class="flex items-center justify-center bg-white rounded-[99px] w-[70px] h-[70px] sm:w-[80px] sm:h-[80px]">
-            <img 
+    <div class="relative z-10 flex flex-col sm:p-4 lg:p-12 gap-2 sm:gap-2.5 lg:gap-6">
+        <div class="flex items-center justify-center bg-white rounded-[99px] w-[40px] h-[40px] sm:w-[55px] sm:h-[55px] lg:w-[80px] lg:h-[80px] ">
+            <img class="w-[25px] sm:w-[30px] lg:w-[40px]"
                 src={img_logo}
                 alt={alt}
             >
         </div>
 
-        <div class="flex flex-col w-[250px] md:w-[288px] h-[120px] text-[#00281C] gap-4">
-            <h2 class="text-[20px] sm:text-2xl/[32px] font-medium">
+        <div class="flex flex-col w-[170px] h-[20px] sm:h-[30px] lg:h-[60px] lg:w-[288px] text-[#00281C]">
+            <h2 class="text-xs sm:text-[16px]/[32px] lg:text-[27px]/[32px] font-medium">
                 {title}
             </h2>
-        
-            <p class="text-[14px] sm:text-base/[24px] font-normal opacity-70">
-                {body}
-            </p>
         </div>
     </div>
-</div>
+</article>
 
 
